fix: correct broken image paths

--- a/index.html
+++ b/index.html
@@ -18,14 +18,10 @@
       <div class="container">
         <!-- NAVIGATION -->
         <div class="navbar">
-          <img
-            src="/intro-section-with-dropdown-navigation-main/images/logo.svg"
-            alt="logo"
-            class="logo"
-          />
+          <img src="./images/logo.svg" alt="logo" class="logo" />
 
           <img
-            src="/intro-section-with-dropdown-navigation-main/images/icon-menu.svg"
+            src="./images/icon-menu.svg"
             alt=""
             class="hamburger"
             id="hamburger"
@@ -39,23 +35,17 @@
                   >Features
                   <img
                     class="chev"
-                    id="features-chev-desk"
-                    src="/intro-section-with-dropdown-navigation-main/images/icon-arrow-down.svg"
+                    id="features-chev -desk"
+                    src="./images/icon-arrow-down.svg"
                     alt=""
                 /></a>
                 <ul class="drop-down-menu-1" id="features-dd-desk">
                   <li>
-                    <img
-                      src="/intro-section-with-dropdown-navigation-main/images/icon-todo.svg"
-                      alt=""
-                    />
+                    <img src="./images/icon-todo.svg" alt="" />
                     <a href="#">Todo List</a>
                   </li>
                   <li>
-                    <img
-                      src="/intro-section-with-dropdown-navigation-main/images/icon-calendar.svg"
-                      alt=""
-                    />
+                    <img src="./images/icon-calendar.svg" alt="" />
                     <a href="#">Calendar</a>
                   </li>
                   <li>
@@ -66,10 +56,7 @@
                     <a href="#">Reminders</a>
                   </li>
                   <li>
-                    <img
-                      src="/intro-section-with-dropdown-navigation-main/images/icon-planning.svg"
-                      alt=""
-                    />
+                    <img src="./images/icon-planning.svg" alt="" />
                     <a href="#">Planning</a>
                   </li>
                 </ul>
@@ -80,7 +67,7 @@
                   <img
                     class="chev"
                     id="company-chev-desk"
-                    src="/intro-section-with-dropdown-navigation-main/images/icon-arrow-down.svg"
+                    src="./images/icon-arrow-down.svg"
                     alt=""
                 /></a>
                 <ul class="drop-down-menu-2" id="company-dd-desk">
@@ -102,7 +89,7 @@
           <div class="menu-mobile" id="menu-mobile">
             <ul class="left-menu">
               <img
-                src="/intro-section-with-dropdown-navigation-main/images/icon-close-menu.svg"
+                src="./images/icon-close-menu.svg"
                 alt=""
                 class="cross"
                 id="cross"
@@ -113,36 +100,24 @@
                   <img
                     id="features-chev-mob"
                     class="chev"
-                    src="/intro-section-with-dropdown-navigation-main/images/icon-arrow-down.svg"
+                    src="./images/icon-arrow-down.svg"
                     alt=""
                 /></a>
                 <ul class="drop-down-menu" id="features-dd-mob">
                   <li>
-                    <img
-                      src="/intro-section-with-dropdown-navigation-main/images/icon-todo.svg"
-                      alt=""
-                    />
+                    <img src="./images/icon-todo.svg" alt="" />
                     <a href="#">Todo List</a>
                   </li>
                   <li>
-                    <img
-                      src="/intro-section-with-dropdown-navigation-main/images/icon-calendar.svg"
-                      alt=""
-                    />
+                    <img src="./images/icon-calendar.svg" alt="" />
                     <a href="#">Calendar</a>
                   </li>
                   <li>
-                    <img
-                      src="/intro-section-with-dropdown-navigation-main/images/icon-reminders.svg"
-                      alt=""
-                    />
+                    <img src="./images/icon-reminders.svg" alt="" />
                     <a href="#">Reminders</a>
                   </li>
                   <li>
-                    <img
-                      src="/intro-section-with-dropdown-navigation-main/images/icon-planning.svg"
-                      alt=""
-                    />
+                    <img src="./images/icon-planning.svg" alt="" />
                     <a href="#">Planning</a>
                   </li>
                 </ul>
@@ -153,7 +128,7 @@
                   <img
                     id="company-chev-mob"
                     class="chev"
-                    src="/intro-section-with-dropdown-navigation-main/images/icon-arrow-down.svg"
+                    src="./images/icon-arrow-down.svg"
                     alt=""
                 /></a>
                 <ul class="drop-down-menu" id="company-dd-mob">
@@ -186,20 +161,16 @@
             <button>Learn more</button>
             <footer>
               <img
-                src="/intro-section-with-dropdown-navigation-main/images/client-databiz.svg"
+                src="./images/client-databiz.svg"
                 alt=""
                 class="footer-logo"
               />
               <img
-                src="/intro-section-with-dropdown-navigation-main/images/client-audiophile.svg"
+                src="./images/client-audiophile.svg"
                 alt=""
                 class="footer-logo"
               />
-              <img
-                src="/intro-section-with-dropdown-navigation-main/images/client-meet.svg"
-                alt=""
-                class="footer-logo"
-              />
+              <img src="./images/client-meet.svg" alt="" class="footer-logo" />
               <img
                 src="/intro-section-with-dropdown-navigation-main/images/client-maker.svg"
                 alt=""
@@ -209,12 +180,12 @@
           </div>
           <img
             class="img-mob"
-            src="/intro-section-with-dropdown-navigation-main/images/image-hero-mobile.png"
+            src="./images/image-hero-mobile.png"
             alt="man with laptop"
           />
           <img
             class="img-desk"
-            src="/intro-section-with-dropdown-navigation-main/images/image-hero-desktop.png"
+            src="./images/image-hero-desktop.png"
             alt="man with laptop"
           />
         </div>
