fix: correct reminders icon path

--- a/index.html
+++ b/index.html
@@ -49,10 +49,7 @@
                     <a href="#">Calendar</a>
                   </li>
                   <li>
-                    <img
-                      src="/intro-section-with-dropdown-navigation-main/images/icon-reminders.svg"
-                      alt=""
-                    />
+                    <img src="./images/icon-reminders.svg" alt="" />
                     <a href="#">Reminders</a>
                   </li>
                   <li>
