--- a/index.html
+++ b/index.html
@@ -168,11 +168,7 @@
                 class="footer-logo"
               />
               <img src="./images/client-meet.svg" alt="" class="footer-logo" />
-              <img
-                src="/intro-section-with-dropdown-navigation-main/images/client-maker.svg"
-                alt=""
-                class="footer-logo"
-              />
+              <img src="./images/client-maker.svg" alt="" class="footer-logo" />
             </footer>
           </div>
           <img
